--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,133 @@
-header {
-    background-color: blueviolet;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    padding: 0;
-    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+}
+
+header {
+    background-color: blueviolet;
+    color: #fff;
+    display: flex;
+    justify-content: space-evenly;
+    position: fixed;
+    width: 100%;
+    align-items: center;
+    padding: 1rem;
+    box-shadow: 0 3px 3px rgb(168, 93, 191);
+}
+
+.active {
+    border-bottom: 1px solid #fff;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h1, h2, h3 {
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+
+header a {
+    text-decoration: none;
+    color: rgb(254, 253, 255);
+}
+
+header h1 {
+    display: inline-block;
+}
+
+header img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    padding: 10px;
+}
+
+.menu li{
+    list-style-type: none;
+    display: flex;
+    justify-content: end;
+    padding: 1rem;
+    display: inline-block;
 }
 
 nav {
-    background-color: rgb(215, 218, 248);
+
+    position: absolute;
+    background-color: blueviolet;
+    width: 100%;
+    left: 0;
+    padding: 0 1rem;
+    top: 100%;
+    color: #fff;
+    display: none;
+}
+
+#nav-toggle:checked~nav {
+    display: block;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    font-size: 2rem;
 }
 
 main {
-    background-color: #fff;
     flex: 1 0 auto;
 }
 
 footer {
     background-color: blueviolet;
     flex-shrink: 0;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 2rem;
+    text-align: center;
+   
+}
+
+.social-networks {
+    list-style-type: none;
+    display: inline-block;
+    align-items: center;
+    text-align: center;
+   
+}
+
+.social-media {
+    width: 50%;
+    justify-content: space-evenly;
+}
+
+.social-media li{
+    display: flex;
+    
+}
+
+.social-networks i{
+    color: #fff;
+    padding: 5%;
+}
+
+.social-networks li{
+    display: inline-block;
+    
 }
