Deleted jpeg images and replaced with webp images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,16 @@ nav {
 main {
     /* Enlarge main element to push footer down*/
     flex: 1 0 auto;
+    /* Add margin top so no content will be covered in header */
+    margin-top: 124px;
+    /* Enable flex properties for child elements */
+    display: flex;
+    flex-direction: column;
+}
+
+/* Hero section */
+.hero {
+    background: url(../images/hero_image.jpg);
 }
 
 /* Footer */
