Adjust image size on physical benefits

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,12 +126,15 @@ main {
     text-align: center;
 }
 
+.motivation img {
+    height: auto;
+    width: 100px; 
+} 
+
 .motivation h2 {
     letter-spacing: normal;
     text-align: center;
 }
-
-.physical-benefits
 
 /* Footer */
 footer {
