--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ header {
     width: 100%;
     align-items: center;
     padding: 0.6rem;
+    z-index: 99;
     box-shadow: 0 3px 3px rgb(168, 93, 191);
 }
 
@@ -230,5 +231,24 @@ footer {
     #photos {
         column-count: 2;
         column-gap: 0;
+    }
+}
+
+/* Media query: tablets and larger (768px and up) */
+@media screen and (min-width: 768px) {
+    /* Header */
+
+    header {
+        display: inline-block;
+    }
+    
+    nav {
+        display: flex;
+        justify-content: space-evenly;
+        
+        padding-right: 1rem;
+    }
+    .nav-toggle-label {
+        display: none;
     }
 }
