Add Tuesday workout routine videos and styled for smaller phone screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,6 +184,10 @@ main {
     list-style-type: none;
 }
 
+video {
+    width: 200px;
+}
+
 /* Footer */
 footer {
     background-color: blueviolet;
