--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,6 +204,7 @@ caption,
 td,
 th {
     padding: 1rem;
+    
 }
 
 caption {
@@ -212,6 +213,14 @@ caption {
     font-size: 1.2rem;
     font-weight: bold;
     text-transform: uppercase;
+}
+
+th {
+    background: rgb(225, 209, 241);
+}
+
+tr:nth-of-type(2n) {
+    background-color: rgb(204, 167, 239);
 }
 
 /* Footer */
@@ -264,11 +273,19 @@ footer {
 @media screen and (max-width: 780px) {
     th {
         display: none;
-        padding: 0.25rem;
+        padding: 5rem;
     }
 
     td {
         display: block;
+    }
+
+    td:first-child {
+        padding-top: 2rem;
+    }
+
+    td:last-child {
+        padding-bottom: 2rem;
     }
 
     td::before {
