--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,7 +208,7 @@ th {
 }
 
 caption {
-    background-color: rgb(195, 158, 229);
+    background-color: rgb(110, 66, 151);
     color: #fff;
     font-size: 1.2rem;
     font-weight: bold;
@@ -217,6 +217,8 @@ caption {
 
 th {
     background: rgb(225, 209, 241);
+    text-decoration: solid;
+    text-decoration-line: underline;
 }
 
 tr:nth-of-type(2n) {
@@ -273,11 +275,10 @@ footer {
 @media screen and (max-width: 780px) {
     th {
         display: none;
-        padding: 5rem;
     }
 
     td {
-        display: block;
+        display: grid;
     }
 
     td:first-child {
@@ -294,11 +295,11 @@ footer {
     }
 
     td:nth-of-type(1)::before {
-        content: "day:";
+        content: "day";
     }
 
     td:nth-of-type(2)::before {
-        content: "breakfast:";
+        content: "breakfast: ";
     }
 
     td:nth-of-type(3)::before {
