Centered and styled h2 elements in meal prep page and added padding to rest of content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,7 +192,16 @@ video {
     width: 200px;
 }
 
-.meal-prep-table {}
+.meal-preps {
+    padding: 1rem;
+}
+
+.meal-preps h2 {
+    letter-spacing: normal;
+    text-align: center;
+    text-decoration: solid;
+    text-decoration-line: underline;
+}
 
 table {
     background: rgb(225, 209, 241);
