--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,6 +246,11 @@ tr:nth-of-type(2n) {
     align-items: center;
 }
 
+.signup-form {
+    background-color: rgba(110, 66, 151, 0.6);
+    padding: 15px;
+}
+
 /* Footer */
 footer {
     background-color: blueviolet;
