Add links and styled Terms, conditions, privacy and cookies policy in form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,6 +277,16 @@ input, textarea {
     padding: 10px;
 }
 
+.note a {
+    text-decoration: none;
+    color: bisque;
+}
+
+.note a:hover {
+    text-decoration: underline;
+    color: blue;
+}
+
 /* Footer */
 footer {
     background-color: blueviolet;
