Positioned send and clear buttons in center of form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,6 +298,11 @@ button {
     background-color: blueviolet;
 }
 
+.send-clear-buttons {
+    display: flex;
+    justify-content: center;
+}
+
 button:hover {
     border: 1px solid blueviolet;
     color: blueviolet;
