Hid unwanted h6 elementson all pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,6 +311,10 @@ button:hover {
     background-color: #fff;
 }
 
+.hide {
+    display: none;
+}
+
 /* Footer */
 footer {
     background-color: blueviolet;
