Add hover to menu for screens above 992px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,7 +216,7 @@ caption,
 td,
 th {
     padding: 1rem;
-    
+
 }
 
 caption {
@@ -264,9 +264,9 @@ tr:nth-of-type(2n) {
     color: rgb(238, 234, 242);
     font-weight: bold;
     margin: 5px 0;
-} 
+}
 
-.input{
+.input {
     height: 40px;
     width: 95%;
     padding: 0 10px;
@@ -274,7 +274,7 @@ tr:nth-of-type(2n) {
     border: 1px solid blueviolet;
 }
 
-.note{
+.note {
     font-size: 14px;
     font-style: italic;
     padding: 10px;
@@ -370,8 +370,9 @@ footer {
     }
 }
 
-/* Media query: tablets and larger (768px and up) */
-@media screen and (min-width: 768px) {
+/* Media query: tablets and larger (833px and up) */
+@media screen and (min-width: 833px) {
+
     /* Header */
     nav {
         display: block;
@@ -392,49 +393,59 @@ footer {
     .hero {
         background-position: 50%;
 
-     }
+    }
 }
 
-/* Media query: large or landscape phones (576px and up) */
-@media screen and (max-width: 780px) {
-    th {
-        display: none;
-    }
-
-    td {
-        display: grid;
-    }
-
-    td:first-child {
-        padding-top: 2rem;
-    }
-
-    td:last-child {
-        padding-bottom: 2rem;
-    }
-
-    td::before {
+/* Large devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+    .menu a:hover {
+        border: 1px solid blueviolet;
+        color: blueviolet;
+        background-color: #fff;
         font-weight: bold;
-        text-transform: capitalize;
-    }
-
-    td:nth-of-type(1)::before {
-        content: "day";
-    }
-
-    td:nth-of-type(2)::before {
-        content: "breakfast: ";
-    }
-
-    td:nth-of-type(3)::before {
-        content: "lunch:";
-    }
-
-    td:nth-of-type(4)::before {
-        content: "evening meal:";
-    }
-
-    td:nth-of-type(5)::before {
-        content: "snacks:";
     }
 }
+
+    /* Media query: large or landscape phones (576px and up) */
+    @media screen and (max-width: 780px) {
+        th {
+            display: none;
+        }
+
+        td {
+            display: grid;
+        }
+
+        td:first-child {
+            padding-top: 2rem;
+        }
+
+        td:last-child {
+            padding-bottom: 2rem;
+        }
+
+        td::before {
+            font-weight: bold;
+            text-transform: capitalize;
+        }
+
+        td:nth-of-type(1)::before {
+            content: "day";
+        }
+
+        td:nth-of-type(2)::before {
+            content: "breakfast: ";
+        }
+
+        td:nth-of-type(3)::before {
+            content: "lunch:";
+        }
+
+        td:nth-of-type(4)::before {
+            content: "evening meal:";
+        }
+
+        td:nth-of-type(5)::before {
+            content: "snacks:";
+        }
+    }
