--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,7 @@ tr:nth-of-type(2n) {
     max-width: 700px;
 }
 
-.signup-form h2, h3 {
+.signup-form h2, h3, .p-center {
     text-align: center;
 }
 
