--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,6 +259,7 @@ tr:nth-of-type(2n) {
     box-shadow: 0 15px 20px #fff;
     display: block;
     max-width: 700px;
+    border-radius: 50px;
 }
 
 .signup-form h2, h3, .p-center {
