--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,7 +251,6 @@ tr:nth-of-type(2n) {
     /* text-align: center; */
 }
 
-
 .signup-form {
     /* Adding opacity to form to make it more visible */
     background-color: rgba(110, 66, 151, 0.6);
@@ -262,10 +261,30 @@ tr:nth-of-type(2n) {
     border-radius: 50px;
 }
 
-.signup-form h2, h3, .p-center {
+.signup-form h2,
+h3,
+.p-center {
     text-align: center;
     text-decoration-line: none;
     padding-bottom: 10px;
+}
+
+.form-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+
+.user-input-box:nth-child(2n) {
+    justify-content: end;
+}
+
+.user-input-box {
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+    padding-bottom: 15px;
 }
 
 .input {
@@ -371,51 +390,51 @@ footer {
 
 }
 
-    /* Media query: large or landscape phones (780px and up) */
-    @media screen and (max-width: 780px) {
-        th {
-            display: none;
-        }
-
-        td {
-            display: grid;
-        }
-
-        td:first-child {
-            padding-top: 2rem;
-        }
-
-        td:last-child {
-            padding-bottom: 2rem;
-        }
-
-        td::before {
-            font-weight: bold;
-            text-transform: capitalize;
-        }
-
-        td:nth-of-type(1)::before {
-            content: "day";
-        }
-
-        td:nth-of-type(2)::before {
-            content: "breakfast: ";
-        }
-
-        td:nth-of-type(3)::before {
-            content: "lunch:";
-        }
-
-        td:nth-of-type(4)::before {
-            content: "evening meal:";
-        }
-
-        td:nth-of-type(5)::before {
-            content: "snacks:";
-        }
+/* Media query: large or landscape phones (780px and up) */
+@media screen and (max-width: 780px) {
+    th {
+        display: none;
     }
 
-    /* Media query: tablets and larger (833px and up) */
+    td {
+        display: grid;
+    }
+
+    td:first-child {
+        padding-top: 2rem;
+    }
+
+    td:last-child {
+        padding-bottom: 2rem;
+    }
+
+    td::before {
+        font-weight: bold;
+        text-transform: capitalize;
+    }
+
+    td:nth-of-type(1)::before {
+        content: "day";
+    }
+
+    td:nth-of-type(2)::before {
+        content: "breakfast: ";
+    }
+
+    td:nth-of-type(3)::before {
+        content: "lunch:";
+    }
+
+    td:nth-of-type(4)::before {
+        content: "evening meal:";
+    }
+
+    td:nth-of-type(5)::before {
+        content: "snacks:";
+    }
+}
+
+/* Media query: tablets and larger (833px and up) */
 @media screen and (min-width: 833px) {
 
     /* Header */
