--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,9 +299,16 @@ h3,
 }
 
 .textarea {
-    display: block;
-    width: 100%;
-    padding: 20px 5px 5px 0;
+    display: flex;
+    align-items: center;
+    padding-top: 10px;
+}
+
+.feedback-space {
+    border-radius: 10px;
+    border: 1px solid blueviolet;
+    margin: 5px 0;
+    font-weight: bold;
 }
 
 /* placeholder {
