--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,6 +287,11 @@ h3,
     padding-bottom: 15px;
 }
 
+.user-input-box label {
+    width: 95%;
+    font-size: 15px;
+}
+
 .input {
     height: 40px;
     width: 95%;
@@ -319,6 +324,7 @@ h3,
     font-size: 14px;
     font-style: italic;
     padding: 10px;
+    text-align: center;
 }
 
 .note a {
