Add padding top to gender buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -367,6 +367,7 @@ button:hover {
 /* To make the buttons side to each other with gap between them*/
 .gender-buttons {
     display: contents;
+    padding-top: 10px;
 }
 
 .hide {
