--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,7 @@ h3 {
     justify-content: space-between;
     border: 1px solid blueviolet;
     padding: 10px 10px;
+    width: 50%;
   }
 
 .healthy-meals-benefits h2,
