--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,16 +142,6 @@ main {
     padding: 1rem 1rem;
 }
 
-.motivation img {
-    height: 25vh;
-    width: auto;
-}
-
-.motivation h2 {
-    letter-spacing: normal;
-    text-align: center;
-}
-
 .physical-benefits, .mental-benefits {
     display: flex;
     flex-direction: row;
@@ -160,6 +150,12 @@ main {
     padding: 10px 10px;
     width: 50%;
     margin-bottom: 5px;
+  }
+
+  .pb-img img, .mb-img img{
+    height: 25vh;
+    width: auto;
+    padding: 1rem 0.25rem;
   }
 
 .workout-benefits {
