--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,6 +260,7 @@ tr:nth-of-type(2n) {
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
     /* height: 100vh; */
     /* text-align: center; */
 }
