--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,11 +154,14 @@ main {
     justify-content: space-between;
     border: 3px solid rgb(30, 24, 37);
     padding: 10px 10px;
-    width: 50%;
+    width: 45%;
     margin-bottom: 5px;
+    margin-left: 51px;
+    height: 246px;
+    overflow: auto;
   }
 
-  .pb-img img, .mb-img img{
+.pb-img img, .mb-img img{
     height: 25vh;
     width: auto;
     padding: 1rem 0.25rem;
@@ -169,6 +172,10 @@ main {
     display: inline-block;
     /*flex direction - column to keep the content in div vertical 
     flex-direction: column; */
+}
+
+.workout-pm-benefits {
+    display: flex;
 }
 
 .workout-benefits h2,
