Add and added flex style to healthy meals pm benefits

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,7 +174,7 @@ main {
     flex-direction: column; */
 }
 
-.workout-pm-benefits {
+.workout-pm-benefits, .healthy-meals-pm-benefits {
     display: flex;
 }
 
