--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 /* General styles */
 body {
     min-height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     font-family: 'Montserrat', sans-serif;
@@ -146,6 +147,7 @@ main {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    width: 100%;
 }
 
 .physical-benefits, .mental-benefits {
