--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,11 +154,11 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border: 3px solid rgb(30, 24, 37);
-    padding: 10px 10px;
+    border: 3px solid rgb(94, 77, 113);
+    padding: 10px 50px;
     width: 45%;
     margin-bottom: 5px;
-    margin-left: 51px;
+    margin-left: 50px;
     height: 246px;
     overflow: auto;
   }
@@ -426,7 +426,6 @@ footer {
     align-items: center;
     padding: 0 2rem;
     text-align: center;
-
 }
 
 /* Hide irrelevant h1 */
@@ -503,6 +502,23 @@ footer {
 
     td:nth-of-type(5)::before {
         content: "snacks:";
+    }
+
+    .workout-pm-benefits, .healthy-meals-pm-benefits {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 30px;
+    }
+
+    .physical-benefits, .mental-benefits {
+    width: 90%;
+    padding: 10px 5px;
+    flex-direction: column;
+    /*margin 0 to keep the 4 benefit divs in the middle otherwise they slightly go to the right*/
+    margin: 0;
+    margin-bottom: 40px;
+    height: auto;
     }
 
 }
