--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,7 @@ main {
     justify-content: center;
     align-items: center;
 }
+
 /*page 1*/
 /* Hero section */
 .hero {
@@ -150,25 +151,35 @@ main {
     width: 100%;
 }
 
-.physical-benefits, .mental-benefits {
+.physical-benefits,
+.mental-benefits {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     border: 3px solid rgb(94, 77, 113);
-    padding: 10px 50px;
-    width: 45%;
+    padding: 10px 10px;
+    width: 50%;
     margin-bottom: 5px;
     margin-left: 50px;
-    height: 246px;
-    overflow: auto;
-  }
+}
 
-.pb-img img, .mb-img img{
+.pb-img,
+.mb-img {
+    width: 400px;
+    background-color: rgb(247, 240, 254);
+    display: flex;
+    align-items: center;
+}
+
+.pb-img img,
+.mb-img img {
     width: 13em;
     padding: 1rem 0.25rem;
     display: block;
+    width: 100%;
+    height: 200px;
     object-fit: contain;
-  }
+}
 
 .workout-benefits {
     letter-spacing: normal;
@@ -177,7 +188,8 @@ main {
     flex-direction: column; */
 }
 
-.workout-pm-benefits, .healthy-meals-pm-benefits {
+.workout-pm-benefits,
+.healthy-meals-pm-benefits {
     display: flex;
     padding: 50px 0;
     box-shadow: 0 15px 10px blueviolet;
@@ -303,8 +315,9 @@ tr:nth-of-type(2n) {
     border-radius: 50px;
 }
 
-.signup-form, form > h2,
-form > h3,
+.signup-form,
+form>h2,
+form>h3,
 .p-center {
     text-align: center;
     text-decoration-line: none;
@@ -342,7 +355,7 @@ form > h3,
     border: 1px solid blueviolet;
     margin: 5px 0;
     font-weight: bold;
-    
+
 }
 
 .textarea {
@@ -504,21 +517,23 @@ footer {
         content: "snacks:";
     }
 
-    .workout-pm-benefits, .healthy-meals-pm-benefits {
+    .workout-pm-benefits,
+    .healthy-meals-pm-benefits {
         flex-direction: column;
         justify-content: center;
         align-items: center;
         padding-bottom: 30px;
     }
 
-    .physical-benefits, .mental-benefits {
-    width: 90%;
-    padding: 10px 5px;
-    flex-direction: column;
-    /*margin 0 to keep the 4 benefit divs in the middle otherwise they slightly go to the right*/
-    margin: 0;
-    margin-bottom: 40px;
-    height: auto;
+    .physical-benefits,
+    .mental-benefits {
+        width: 90%;
+        padding: 10px 5px;
+        flex-direction: column;
+        /*margin 0 to keep the 4 benefit divs in the middle otherwise they slightly go to the right*/
+        margin: 0;
+        margin-bottom: 40px;
+        height: auto;
     }
 
 }
