--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,8 +159,7 @@ main {
     border: 3px solid rgb(94, 77, 113);
     padding: 10px 10px;
     width: 50%;
-    margin-bottom: 5px;
-    margin-left: 50px;
+    margin: 0 10px;
 }
 
 .pb-img,
