--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -452,7 +452,8 @@ footer {
     display: inline-block;
     align-items: center;
     text-align: center;
-
+    padding: 0px 28px;
+    font-size: 25px;
 }
 
 .social-media {
@@ -462,7 +463,7 @@ footer {
 
 .social-media li {
     display: flex;
-
+    padding: 0 15px;
 }
 
 .social-networks i {
