--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ tr:nth-of-type(2n) {
 }
 
 .signup-page {
-    background-image: url("../images/Sign_up_bg.webp");
+    background-image: url("../images/sign_up_bg.webp");
     background-size: cover;
     background-position: 50%;
     flex-grow: 1;
