Add 100% width style to responsive page img to centralize img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,6 +429,10 @@ button:hover {
     padding: 0 10px;
 }
 
+.responsive-content img {
+    width: 100%;
+}
+
 /* Footer */
 footer {
     background-color: blueviolet;
