--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -430,7 +430,10 @@ button:hover {
 }
 
 .responsive-content img {
+    display: block;
     width: 100%;
+    height: 200px;
+    object-fit: contain;
 }
 
 /* Footer */
