Apply max with to workout routine page and centrally position all elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,17 @@ main {
     object-fit: contain;
 }
 
+.workout-routines {
+    width: 100%;
+    max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
 .workout-pm-benefits,
 .healthy-meals-pm-benefits {
     display: flex;
