--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,6 +191,16 @@ main {
     align-items: center;
 }
 
+.monday,
+.tuesday,
+.wednesday,
+.thursday,
+.friday,
+.saturday,
+.sunday {
+    padding: 50px 0;
+}
+
 .workout-pm-benefits,
 .healthy-meals-pm-benefits {
     display: flex;
