Centrally position nav menu bar icons on tablet and smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -584,6 +584,11 @@ footer {
         padding: 0 15px;
     }
 
+    .menu {
+        display: flex;
+        justify-content: center;
+    }
+
 }
 
 @media screen and (max-width:780px) {
